--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
 }
 /* NAVIGATION SECTION */
 .header {
-  background-image: url("bgimage.webp");
+  background-image: url("imgs/bgimage.webp");
   z-index: -1;
   padding: 2.8rem;
   width: 100%;
@@ -138,7 +138,8 @@ html {
   flex-direction: column;
   gap: 1.2rem;
   color: #fefefe;
-  font-weight: bold;
+  font-weight: bolder;
+  letter-spacing: 1px;
   justify-content: flex-end;
 }
 .sub-profile {
