--- a/style.css
+++ b/style.css
@@ -8,12 +8,15 @@ html {
   font-size: 62.5%;
   color: -#1a1a1a;
 }
+body {
+  overflow-x: hidden;
+  width: 120rem;
+}
 .main {
-  max-width: 125rem;
   box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
-  overflow: hidden;
   opacity: 1;
+  width: 100%;
 }
 /* NAVIGATION SECTION */
 .header {
@@ -42,6 +45,9 @@ html {
   color: #fefefe;
   font-size: 1.2rem;
   margin-top: 0.8rem;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.4rem;
+  }
 }
 .right {
   display: flex;
@@ -62,6 +68,10 @@ html {
   border: none;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.3),
     0 0 4px rgba(0, 0, 0, 0.2);
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.6rem;
+    height: 3.8rem;
+  }
 }
 .nav-btn:hover {
   cursor: pointer;
@@ -72,12 +82,19 @@ html {
   height: 4rem;
   width: 4rem;
   border-radius: 5px;
+  @media screen and (max-width: 37.5em) {
+    height: 4.4rem;
+    width: 4.4rem;
+  }
 }
 .notifications {
   font-size: 2.4rem;
   margin-top: 6px;
   color: #fefefe;
   position: relative;
+  @media screen and (max-width: 37.5em) {
+    height: 2.8rem;
+  }
 }
 .notifications:hover {
   cursor: pointer;
@@ -137,6 +154,7 @@ html {
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
+  font-size: 1.4rem;
   color: #fefefe;
   font-weight: bolder;
   letter-spacing: 1px;
@@ -160,6 +178,9 @@ html {
   padding: 2.4rem;
   border: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  @media screen and (max-width: 37.5em) {
+    padding: 1.4rem;
+  }
 }
 .circle {
   height: 8rem;
@@ -190,11 +211,17 @@ html {
   margin-bottom: 0.4rem;
   color: #fff;
   font-weight: bolder;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.8rem;
+  }
 }
 .text2 {
   font-size: 1.2rem;
   color: #fff;
   margin-bottom: 1.8rem;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.6rem;
+  }
 }
 .complete {
   padding: 0.6rem;
@@ -231,6 +258,9 @@ html {
 }
 .fam {
   font-size: 1.4rem;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.6rem;
+  }
 }
 .fam,
 .icons {
@@ -242,6 +272,9 @@ html {
   width: 25rem;
 
   border-right: 0.5px solid #ddd;
+  @media screen and (max-width: 25em) {
+    width: 30rem;
+  }
 }
 .covered,
 .beneficiary {
@@ -256,21 +289,43 @@ html {
   width: 4rem;
   border-radius: 50%;
   border: none;
+  @media screen and (max-width: 37.5em) {
+    height: 4.4rem;
+    width: 4.4rem;
+  }
+  @media screen and (max-width: 25em) {
+    height: 4.8rem;
+    width: 4.8rem;
+  }
 }
 .headings {
   color: #cdcdcd;
+  font-size: 1.4rem;
   font-weight: bolder;
   margin-top: 1.8rem;
   margin-bottom: 1.8rem;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.6rem;
+  }
 }
 /* ABOUT ME SECTION */
 .about {
   color: #cdcdcd;
   font-weight: bolder;
+  font-size: 1.4rem;
   margin: 1.4rem 0 0.4rem 0;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.8rem;
+  }
 }
 .about-text {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.8rem;
+  }
+  @media screen and (max-width: 25em) {
+    line-height: 2;
+  }
 }
 /* NAVIGATION SECTION */
 .another {
@@ -283,6 +338,10 @@ html {
   justify-content: flex-start;
   gap: 3.2rem;
   border-bottom: 0.5px solid #ddd;
+  @media screen and (max-width: 25em) {
+    gap: 2.8rem;
+    width: 100%;
+  }
 }
 .dash-icon {
   height: 1.6rem;
@@ -297,7 +356,7 @@ html {
 }
 .dash-text,
 .text {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: bold;
   margin-bottom: 1.8rem;
 }
@@ -305,10 +364,14 @@ html {
   color: #cdcdcd;
   font-weight: bolder;
 }
+.text:hover {
+  color: #000;
+  font-weight: bolder;
+}
 .claim {
   margin-bottom: 1.8rem;
   padding: 0.6rem;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   color: #fefefe;
   background-color: #0dd39d;
   border: none;
@@ -321,6 +384,7 @@ html {
 .claim:hover {
   cursor: pointer;
   background-color: #02c994;
+  transform: translateY(-0.1rem);
 }
 .logo1 {
   font-size: 1.4rem;
@@ -350,13 +414,19 @@ html {
 }
 .claims,
 .num1 {
-  height: 3.2rem;
-  width: 3.2rem;
+  height: 4rem;
+  width: 4rem;
+
   border-radius: 50%;
   border: none;
+
+  @media screen and (max-width: 37.5em) {
+    height: 4.4rem;
+    width: 4.4rem;
+  }
 }
 .number {
-  font-size: 4.8rem;
+  font-size: 5.2rem;
   padding: 1.2rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -402,6 +472,10 @@ html {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
   width: 65rem;
+  @media screen and (max-width: 25em) {
+    width: 70rem;
+    font-size: 1.5rem;
+  }
 }
 .member-img {
   height: 14rem;
@@ -412,12 +486,16 @@ html {
   font-size: 1.4rem;
   font-weight: bold;
   margin-bottom: 1.4rem;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.6rem;
+  }
 }
 .detail-1,
 .detail-2,
 .detail-3 {
   display: flex;
   align-items: center;
+
   justify-content: flex-start;
   margin-bottom: 1.6rem;
 }
@@ -429,8 +507,11 @@ html {
   color: #cdcdcd;
 }
 .detail-text {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   color: #777;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.8rem;
+  }
 }
 .pay {
   width: 15%;
@@ -450,6 +531,7 @@ html {
   right: 0;
   transform: translate(-20%, -60%);
   transition: all 0.3s;
+  font-size: 1.8rem;
 }
 /* ACTIVITY SECTION */
 .activity {
@@ -457,14 +539,29 @@ html {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin: 2.4rem;
   width: 25rem;
+  overflow-y: scroll;
+  height: 45rem;
+  @media screen and (max-width: 37.5em) {
+    height: 50rem;
+    width: 30rem;
+  }
+  @media screen and (max-width: 25em) {
+    display: none;
+  }
 }
 .activity-header {
-  font-size: 1.2rem;
+  font-size: 2rem;
   color: #bbb;
   font-weight: bold;
   padding: 1rem 0;
   border-bottom: 0.5px solid #ddd;
   margin-bottom: 1.2rem;
+}
+.activity1 {
+  font-size: 1.4rem;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.8rem;
+  }
 }
 .flex-activity {
   display: flex;
@@ -479,12 +576,14 @@ html {
   background-color: rgb(70, 128, 193);
 }
 .notify {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: bold;
+  @media screen and (max-width: 37.5em) {
+    font-size: 1.8rem;
+  }
 }
 .activity-text {
   color: #777;
-  font-size: 1.2rem;
   margin-left: 1.8rem;
   line-height: 1.5;
   margin-bottom: 0.8rem;
