--- a/style.css
+++ b/style.css
@@ -4,26 +4,38 @@
   box-sizing: border-box;
 }
 html {
-  font-family: sans-serif;
   font-size: 62.5%;
-  color: -#1a1a1a;
+  font-family: serif;
 }
 body {
   overflow-x: hidden;
   width: 120rem;
 }
 .main {
-  box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, 0.1);
-  border-radius: 12px;
+  box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, 0.09);
+  /* border-radius: 12px; */
   opacity: 1;
+  margin: 0 4rem;
   width: 100%;
 }
+
 /* NAVIGATION SECTION */
 .header {
-  background-image: url("imgs/bgimage.webp");
-  z-index: -1;
+  background-image: linear-gradient(
+      rgba(10, 72, 88, 0.5),
+      rgba(59, 109, 121, 0.6)
+    ),
+    url("imgs/bgimage.webp");
   padding: 2.8rem;
   width: 100%;
+}
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #fca424;
+  border-radius: 6px;
+  height: 5px;
 }
 .navigation {
   display: flex;
@@ -45,9 +57,6 @@ body {
   color: #fefefe;
   font-size: 1.2rem;
   margin-top: 0.8rem;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.4rem;
-  }
 }
 .right {
   display: flex;
@@ -55,6 +64,7 @@ body {
   margin-left: auto;
   gap: 4rem;
 }
+
 .nav-btn {
   height: 3.2rem;
   width: auto;
@@ -62,16 +72,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 5px;
+  border-radius: 2px;
   color: #fefefe;
-  background-color: inherit;
+  background-color: rgba(197, 190, 190, 0.3);
   border: none;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.3),
     0 0 4px rgba(0, 0, 0, 0.2);
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.6rem;
-    height: 3.8rem;
-  }
 }
 .nav-btn:hover {
   cursor: pointer;
@@ -82,19 +88,22 @@ body {
   height: 4rem;
   width: 4rem;
   border-radius: 5px;
-  @media screen and (max-width: 37.5em) {
-    height: 4.4rem;
-    width: 4.4rem;
-  }
 }
 .notifications {
   font-size: 2.4rem;
   margin-top: 6px;
   color: #fefefe;
+}
+.notifications::after {
+  content: "";
+  height: 0.6rem;
+  width: 0.6rem;
+  border-radius: 50%;
+  background-color: yellow;
   position: relative;
-  @media screen and (max-width: 37.5em) {
-    height: 2.8rem;
-  }
+  top: -2rem;
+  left: 1.5rem;
+  display: block;
 }
 .notifications:hover {
   cursor: pointer;
@@ -155,8 +164,8 @@ body {
   flex-direction: column;
   gap: 1.2rem;
   font-size: 1.4rem;
-  color: #fefefe;
-  font-weight: bolder;
+  color: #ddd;
+  /* font-weight: bolder; */
   letter-spacing: 1px;
   justify-content: flex-end;
 }
@@ -166,11 +175,11 @@ body {
 }
 .progress {
   display: flex;
-  height: 15rem;
+  height: 13rem;
   width: 30rem;
   gap: 2.4rem;
   align-items: center;
-  background-color: #c5bebe;
+  background-color: rgba(197, 190, 190, 0.3);
   margin-left: auto;
   border: 1px solid black;
   opacity: 0.9;
@@ -178,9 +187,6 @@ body {
   padding: 2.4rem;
   border: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  @media screen and (max-width: 37.5em) {
-    padding: 1.4rem;
-  }
 }
 .circle {
   height: 8rem;
@@ -211,17 +217,11 @@ body {
   margin-bottom: 0.4rem;
   color: #fff;
   font-weight: bolder;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.8rem;
-  }
 }
 .text2 {
   font-size: 1.2rem;
   color: #fff;
   margin-bottom: 1.8rem;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.6rem;
-  }
 }
 .complete {
   padding: 0.6rem;
@@ -254,13 +254,11 @@ body {
   justify-content: space-between;
   align-items: center;
   border-bottom: 0.5px solid #ddd;
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 .fam {
   font-size: 1.4rem;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.6rem;
-  }
+  font-weight: 500;
 }
 .fam,
 .icons {
@@ -270,17 +268,13 @@ body {
   padding: 2.4rem;
   grid-column: 1;
   width: 25rem;
-
   border-right: 0.5px solid #ddd;
-  @media screen and (max-width: 25em) {
-    width: 30rem;
-  }
 }
 .covered,
 .beneficiary {
   display: flex;
   gap: 1rem;
-  margin-bottom: 3.2rem;
+  margin-bottom: 2.4rem;
 }
 .covered1,
 .bene1,
@@ -289,43 +283,25 @@ body {
   width: 4rem;
   border-radius: 50%;
   border: none;
-  @media screen and (max-width: 37.5em) {
-    height: 4.4rem;
-    width: 4.4rem;
-  }
-  @media screen and (max-width: 25em) {
-    height: 4.8rem;
-    width: 4.8rem;
-  }
 }
 .headings {
-  color: #cdcdcd;
+  color: #666;
   font-size: 1.4rem;
-  font-weight: bolder;
-  margin-top: 1.8rem;
-  margin-bottom: 1.8rem;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.6rem;
-  }
+  font-weight: 540;
+  margin-top: 1.6rem;
+  margin-bottom: 1.6rem;
 }
 /* ABOUT ME SECTION */
 .about {
-  color: #cdcdcd;
-  font-weight: bolder;
+  color: #888;
+  font-weight: 540;
   font-size: 1.4rem;
   margin: 1.4rem 0 0.4rem 0;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.8rem;
-  }
 }
 .about-text {
-  font-size: 1.4rem;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.8rem;
-  }
-  @media screen and (max-width: 25em) {
-    line-height: 2;
-  }
+  font-size: 1.2rem;
+  line-height: 1.5;
+  font-weight: bold;
 }
 /* NAVIGATION SECTION */
 .another {
@@ -335,18 +311,13 @@ body {
 .nav {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
   gap: 3.2rem;
   border-bottom: 0.5px solid #ddd;
-  @media screen and (max-width: 25em) {
-    gap: 2.8rem;
-    width: 100%;
-  }
 }
 .dash-icon {
   height: 1.6rem;
   width: 1.6rem;
-  margin-bottom: 1.8rem;
+  padding-bottom: 1.4rem;
 }
 .dash {
   display: flex;
@@ -358,7 +329,16 @@ body {
 .text {
   font-size: 1.4rem;
   font-weight: bold;
-  margin-bottom: 1.8rem;
+  text-wrap: nowrap;
+  text-decoration: none;
+  color: inherit;
+  padding-bottom: 1.4rem;
+  transition: all 0.1s;
+}
+
+.dash-text:hover,
+.text:hover {
+  border-bottom: 4px solid #fca424;
 }
 .text {
   color: #cdcdcd;
@@ -369,14 +349,13 @@ body {
   font-weight: bolder;
 }
 .claim {
-  margin-bottom: 1.8rem;
-  padding: 0.6rem;
+  padding: 0.7rem 1.4rem;
   font-size: 1.4rem;
   color: #fefefe;
   background-color: #0dd39d;
+  margin-bottom: 1.4rem;
   border: none;
   border-radius: 5px;
-  width: 10%;
   transition: all 0.3s;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.3),
     0 0 4px rgba(0, 0, 0, 0.2);
@@ -416,18 +395,15 @@ body {
 .num1 {
   height: 4rem;
   width: 4rem;
-
   border-radius: 50%;
   border: none;
-
-  @media screen and (max-width: 37.5em) {
-    height: 4.4rem;
-    width: 4.4rem;
-  }
 }
 .number {
-  font-size: 5.2rem;
-  padding: 1.2rem;
+  font-size: 4.2rem;
+  padding: 0 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .flex-display {
@@ -435,7 +411,7 @@ body {
 }
 .claims {
   margin-right: -1.6rem;
-  border: 1px solid #fdf2e9;
+  border: 2px solid #fdf2e9;
 }
 .flex {
   display: flex;
@@ -444,9 +420,9 @@ body {
   border-collapse: collapse;
 }
 .test-text {
-  font-size: 1.2rem;
-  color: #cdcdcd;
-  font-weight: bolder;
+  font-size: 1.4rem;
+  color: rgba(26, 26, 26, 0.6);
+  font-weight: bold;
   margin-bottom: 1.2rem;
   letter-spacing: 1.2px;
 }
@@ -458,8 +434,8 @@ body {
 .member {
   display: flex;
   flex-direction: column;
-  margin-top: 2.4rem;
-  gap: 1.8rem;
+  margin-top: 2.8rem;
+  gap: 2.4rem;
 }
 .members {
   display: flex;
@@ -467,28 +443,21 @@ body {
 .member1 {
   display: flex;
   gap: 2.4rem;
-  padding: 1.8rem;
+  padding: 1.6rem;
   border-radius: 7px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
-  width: 65rem;
-  @media screen and (max-width: 25em) {
-    width: 70rem;
-    font-size: 1.5rem;
-  }
+  width: 60rem;
 }
 .member-img {
-  height: 14rem;
-  width: 14rem;
-  border-radius: 7px;
+  height: 12rem;
+  width: 12rem;
+  border-radius: 4px;
 }
 .member-name {
   font-size: 1.4rem;
   font-weight: bold;
   margin-bottom: 1.4rem;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.6rem;
-  }
 }
 .detail-1,
 .detail-2,
@@ -497,21 +466,18 @@ body {
   align-items: center;
 
   justify-content: flex-start;
-  margin-bottom: 1.6rem;
+  margin-bottom: 1.4rem;
 }
 .folder,
 .location,
 .calender {
-  font-size: 2.4rem;
+  font-size: 1.8rem;
   margin-right: 1.2rem;
-  color: #cdcdcd;
+  color: #888;
 }
 .detail-text {
-  font-size: 1.5rem;
-  color: #777;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.8rem;
-  }
+  font-size: 1.2rem;
+  color: #666;
 }
 .pay {
   width: 15%;
@@ -519,7 +485,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #fca424;
-  padding: 0.4rem;
+  padding: 0.6rem;
   border-radius: 4px;
   color: #fefefe;
   font-weight: bold;
@@ -531,29 +497,28 @@ body {
   right: 0;
   transform: translate(-20%, -60%);
   transition: all 0.3s;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
 }
 /* ACTIVITY SECTION */
 .activity {
   padding: 1.2rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin: 2.4rem;
-  width: 25rem;
+  margin: 2.4rem 0 0 2.4rem;
+  width: 100%;
+  /* height: 51rem; */
+  overflow: hidden;
+}
+.inside {
+  width: 100%;
   overflow-y: scroll;
-  height: 45rem;
-  @media screen and (max-width: 37.5em) {
-    height: 50rem;
-    width: 30rem;
-  }
-  @media screen and (max-width: 25em) {
-    display: none;
-  }
+  height: 42rem;
 }
-.activity::-webkit-scrollbar {
-  width: 5px;
-  height: 1px;
+
+.inside::-webkit-scrollbar {
+  width: 0.4rem;
 }
-.activity::-webkit-scrollbar-thumb {
+.inside::-webkit-scrollbar-thumb {
+  border-radius: 2rem;
   background: #fca424;
 }
 
@@ -567,9 +532,6 @@ body {
 }
 .activity1 {
   font-size: 1.4rem;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.8rem;
-  }
 }
 .flex-activity {
   display: flex;
@@ -578,17 +540,28 @@ body {
   margin-bottom: 0.8rem;
 }
 .blue-dot {
-  height: 0.6rem;
-  width: 0.6rem;
+  height: 0.8rem;
+  width: 0.8rem;
   border-radius: 50%;
   background-color: rgb(70, 128, 193);
+  box-shadow: 0 0 14px rgb(30, 103, 186);
+}
+
+.blue-dot::before {
+  background-color: #ccc;
+  content: "";
+  position: relative;
+  display: block;
+  transform: translateX(-0.2rem);
+  width: 0.1rem;
+  top: 1rem;
+  height: 10rem;
+  bottom: 0px;
+  left: 5px;
 }
 .notify {
   font-size: 1.4rem;
   font-weight: bold;
-  @media screen and (max-width: 37.5em) {
-    font-size: 1.8rem;
-  }
 }
 .activity-text {
   color: #777;
@@ -605,14 +578,42 @@ body {
   border-radius: 7px;
 }
 .green-dot {
-  height: 0.6rem;
-  width: 0.6rem;
+  height: 0.8rem;
+  width: 0.8rem;
   border-radius: 50%;
   background-color: #0dd39d;
+  box-shadow: 0 0 14px #0dd39d;
+}
+
+.green-dot::before {
+  background-color: #ccc;
+  content: "";
+  position: relative;
+  display: block;
+  transform: translateX(-0.2rem);
+  width: 0.1rem;
+  top: 1rem;
+  height: 10rem;
+  bottom: 0px;
+  left: 5px;
 }
 .yellow-dot {
-  height: 0.6rem;
-  width: 0.6rem;
+  height: 0.8rem;
+  width: 0.8rem;
   border-radius: 50%;
   background-color: #fca424;
+  box-shadow: 0 0 14px #fca424;
+}
+
+.yellow-dot::before {
+  background-color: #ccc;
+  content: "";
+  position: relative;
+  display: block;
+  transform: translateX(-0.2rem);
+  width: 0.1rem;
+  top: 1rem;
+  height: 10rem;
+  bottom: 0px;
+  left: 5px;
 }
